--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.38",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.netcode.gameobjects": "2.5.1",
     "com.unity.render-pipelines.high-definition": "17.2.0",
     "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
